firefox-trunk (18.0~a1~hg20121008r109581-0ubuntu2) UNRELEASED; urgency=low

  * Fix LP: #1064423 - "Submitting your report..." shows missing-icon icon.
    Install the throbber icon in the package
    - update debian/firefox.install.in

 -- Chris Coulson <chris.coulson@canonical.com>  Tue, 09 Oct 2012 15:28:46 +0100

firefox-trunk (18.0~a1~hg20121008r109581-0ubuntu1) quantal; urgency=low

  * New upstream snapshot v18.0 A1 HG20121008R109581

  * Update globalmenu-extension to 3.5.5 prerelease r468
    - Fix LP: #1051152 - Firefox 16 beta crash in nsIContent::SetAttr with
      greasemonkey installed
    - Improve handling of radio items, and work correctly for radio items
      without a name
    - Refactoring to help avoid a class of reentrancy type crashes which
      have been exposed by updates of third-party addons recently
    - Fix crash in uGlobalMenuDocListener::HandleMutations
  * Enable profiling on nightly builds
    - update debian/config/mozconfig.in
  * Refresh patches
    - update debian/patches/mozilla-kde.patch
    - update debian/patches/firefox-kde.patch
    - update debian/patches/use-new-yasm-in-lucid.patch
  * Turn on Network Manager integration
    - update debian/vendor-gre.js
  * Don't include nsString.h in nsRegion.h, which is included by nsIWidget.h,
    used by our menubar addon. Use nsStringGlue.h instead
    - add debian/patches/no-internal-api-in-external-headers.patch
    - update debian/patches/series.in
  * Update favicon for Google searchplugin
    - update debian/searchplugins/en-GB/google.xml
    - update debian/searchplugins/en-US/google.xml
    - update debian/searchplugins/en-ZA/google.xml
    - update debian/searchplugins/ja/google-jp.xml
    - update debian/searchplugins/ku/google-ku.xml

 -- Chris Coulson <chris.coulson@canonical.com>  Tue, 28 Aug 2012 11:39:02 +0100

firefox-trunk (17.0~a1~hg20120826r103484-0ubuntu1) quantal; urgency=low

  * New upstream snapshot v17.0 A1 HG20120826R103484
