@@ -2,11 +2,12 @@ window[shellshowingmenubar="true"] menubar {
   display: none ! important;
 }
 
-window[shellshowingmenubar="true"] toolbar[type="menubar"]:not([customizing="true"]) {
+window[shellshowingmenubar="true"]
+toolbar[type="menubar"]:not([customizing="true"]) {
   min-height: 0 !important;
   border: 0 !important;
 }
 
-menubar menupopup:not([type]) {
+window[shellshowingmenubar="true"] menubar menupopup:not([type]) {
   -moz-binding: url("chrome://globalmenu/content/bindings.xml#popup") !important;
 }
