@@ -4,7 +4,7 @@
      xmlns:em="http://www.mozilla.org/2004/em-rdf#">
 	<Description about="urn:mozilla:install-manifest">
 		<em:id>globalmenu@ubuntu.com</em:id>
-		<em:version>3.5.5pre</em:version>
+		<em:version>3.6pre</em:version>
 		<em:unpack>true</em:unpack>
 
 		<em:targetApplication>
