@@ -48,7 +48,6 @@
 #include "uWidgetAtoms.h"
 
 #include "uDebug.h"
-#include "compat.h"
 
 void
 uGlobalMenuSeparator::InitializeDbusMenuItem()
