@@ -51,7 +51,6 @@
 #include "uWidgetAtoms.h"
 
 #include "uDebug.h"
-#include "compat.h"
 
 uGlobalMenuObject*
 NewGlobalMenuItem(uGlobalMenuObject *aParent,
